--- a/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,17 +1,17 @@
 ﻿@page
 @model ExternalLoginModel
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4 id="external-login-title">Associate your @Model.ProviderDisplayName account.</h4>
+<h4 id="external-login-title">@Localizer["Associate"] @Model.ProviderDisplayName @Localizer["Account"].</h4>
 <hr />
 
 <p id="external-login-description" class="text-info">
-    You've successfully authenticated with <strong>@Model.ProviderDisplayName</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
+    @Localizer["Info1"] <strong>@Model.ProviderDisplayName</strong>.
+    @Localizer["Info2"]
 </p>
 
 <div class="row">
@@ -23,7 +23,7 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary">@Localizer["Register"]</button>
         </form>
     </div>
 </div>
