--- a/Views/Account/AddBook.cshtml
+++ b/Views/Account/AddBook.cshtml
@@ -22,33 +22,33 @@
                     <input type="hidden" asp-for="Book.ApplicationUserId" class="form-control" value="@ViewBag.UserId" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="Book.Name" class="control-label"></label>
+                    <label class="control-label">@Localizer["Name"]</label>
                     <input asp-for="Book.Name" class="form-control" />
                     <span asp-validation-for="Book.Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Book.Description" class="control-label"></label>
+                    <label class="control-label">@Localizer["Description"]</label>
                     <textarea asp-for="Book.Description" class="form-control"></textarea>
                     <span asp-validation-for="Book.Description" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Book.Genre" class="control-label"></label>
+                    <label class="control-label">@Localizer["Genre"]</label>
                     <select asp-for="Book.Genre" asp-items="@ViewBag.Genres" class="form-control"></select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Book.Tags" class="control-label"></label>
+                    <label class="control-label">@Localizer["Tags"]</label>
                     <input asp-for="Tags" placeholder='write some tags' value='' class="form-control tags" />
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="Index" asp-route-userId="@ViewBag.UserId">Back to List</a>
+        <a asp-action="Index" asp-route-userId="@ViewBag.UserId">@Localizer["Back"]</a>
     </div>
 
 </body>
