--- a/Views/Account/EditBook.cshtml
+++ b/Views/Account/EditBook.cshtml
@@ -9,30 +9,30 @@
         <form asp-action="EditBook" enctype="multipart/form-data">            
             <p></p>
             <input type="hidden" id="chapterId" asp-for="Chapter.Id" value="@Model.Chapter.Id" />
-            <label asp-for="Chapter.Title" class="control-label"></label>
+            <label class="control-label">@Localizer["Title"]</label>
             <input type="text" asp-for="Chapter.Title" value="@Model.Chapter.Title"/>
             <p></p>
             <textarea asp-for="Chapter.Text" id="EditingArea">@Model.Chapter.Text</textarea>
-            <label asp-for="Picture" class="control-label"></label>
+            <label class="control-label">@Localizer["Picture"]</label>
             <div class="custom-file">
                 <input type="file" asp-for="Picture" class="custom-file-input" id="customFile">
-                <label class="custom-file-label" for="customFile">Choose file</label>
+                <label class="custom-file-label" for="customFile">@Localizer["ChooseFile"]</label>
             </div>
             <p></p>
             <div class="btn-group">
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-primary">@Localizer["Save"]</button>
                 <a asp-action="DeleteChapter" asp-route-bookId="@ViewBag.BookId"
-                   asp-route-chapterId="@Model.Chapter.Id" class="btn btn-danger">Delete</a>
+                   asp-route-chapterId="@Model.Chapter.Id" class="btn btn-danger">@Localizer["Delete"]</a>
             </div>
             <p></p>
         </form>
     }
     else
     {
-        <textarea disabled id="EditingArea">Choose or add chapter to edit</textarea>
+<textarea disabled id="EditingArea">@Localizer["ChooseOrAdd"]</textarea>
     }
     
-    <a asp-action="NewChapter" asp-route-bookId="@ViewBag.BookId" class="btn btn-primary">Add chapter</a>
+<a asp-action="NewChapter" asp-route-bookId="@ViewBag.BookId" class="btn btn-primary">@Localizer["Add"]</a>
 
     <ul class='list-group list-group-horizontal chaptersList' id="chaptersList">
         @for (int i = 1; i <= ViewBag.Chapters; i++)
