--- a/Views/Home/ReadBook.cshtml
+++ b/Views/Home/ReadBook.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CourseWork.Models.PageViewModel
 
 <head>
-    <title>Read Book</title>
+    <title>@Model.Title</title>
 </head>
 <body>
     <style>
@@ -21,7 +21,7 @@
         @if (Model.HasPrevPage)
         {
             <a asp-action="ReadBook" asp-route-bookId="@ViewBag.BookId"
-               asp-route-chapterNum="@(Model.CurrentPage - 1)" class="btn btn-primary">Prev</a>
+               asp-route-chapterNum="@(Model.CurrentPage - 1)" class="btn btn-primary">@Localizer["Previous"]</a>
         }
         <form asp-action="ReadBook">
             <input type="hidden" name="bookId" id="bookIdField" value="@ViewBag.BookId">
@@ -35,7 +35,7 @@
         @if (Model.HasNextPage)
         {
             <a asp-action="ReadBook" asp-route-bookId="@ViewBag.BookId"
-               asp-route-chapterNum="@(Model.CurrentPage + 1)" class="btn btn-primary">Next</a>
+               asp-route-chapterNum="@(Model.CurrentPage + 1)" class="btn btn-primary">@Localizer["Next"]</a>
         }
     </div>
     @if (Context.User.Identity.IsAuthenticated)
@@ -43,16 +43,16 @@
         <p></p>
         <input type="hidden" id="userNameField" value="@Context.User.Identity.Name">
         <label class="btn btn-info">
-            <input type="checkbox" id="like" checked="@Model.Liked" autocomplete="off"> Like
+            <input type="checkbox" id="like" checked="@Model.Liked" autocomplete="off"> @Localizer["Like"]
         </label>
         <h1><div class="rating"></div></h1>
-        <h3>Reviews:</h3>
+        <h3>@Localizer["Reviews"]:</h3>
         <div id="comments"></div>
         <input type="text" id="commentText" />
-        <input type="button" class="btn btn-primary" id="sendComment" value="Отправить" />
+        <input type="button" class="btn btn-primary" id="sendComment" value="@Localizer["Send"] " />
     }
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">@Localizer["Back"]</a>
     </div>
 
 </body>
