--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -1,5 +1,5 @@
 ﻿<body>
-    <h3>Search results: </h3>
+    <h3>@Localizer["Search results"]: </h3>
     @foreach (var book in ViewBag.FoundBooks)
     {
         <h5><a asp-action="Contents" asp-route-bookId="@book.Id">@book.Name | @book.AverageRating&#9957</a></h5>
